--- a/index.css
+++ b/index.css
@@ -26,6 +26,7 @@ div.sidebar {
   height: 10rem;
   justify-content: center;
   text-align: center;
+  border-image-source: https://unsplash.com/photos/K2AWz4lXrAM;
 }
 
 h1 {
@@ -68,7 +69,7 @@ form {
 }
 
 .let {
-  margin-left: 2rem;
+  margin-left: 2rem; 
   margin-bottom: 1rem;
   margin-top: 1rem;
   font-weight: bold;
@@ -134,4 +135,7 @@ a {
     background-color: #66745a;
     color: white;
   }
+}
+br {
+
 }
