--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body {
 }
 
 .left {
-  background-image: url("Giddy_Frosh.jpg");
+  background-image: url("Giddy_Frosh-02.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
